--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   get: ^4.7.3
   flutter_launcher_icons: ^0.14.4
+  firebase_core: ^4.4.0
+  firebase_auth: ^6.1.4
 
 
 dev_dependencies:
