--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   firebase_core: ^4.4.0
   firebase_auth: ^6.1.4
+  google_sign_in: ^7.2.0
 
 
 dev_dependencies:
