--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_auth: ^6.1.4
   google_sign_in: ^7.2.0
   cloud_firestore: ^6.1.2
+  flutter_spinkit: ^5.2.2
+  
 
 
 dev_dependencies:
