--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   cloud_firestore: ^6.1.2
   flutter_spinkit: ^5.2.2
   shimmer: ^3.0.0
+  pdf: ^3.11.3
+  printing: ^5.14.2
   
 
 
