--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   pdf: ^3.11.3
   printing: ^5.14.2
   intl: ^0.20.2
+  google_maps_flutter: ^2.14.2
+  geolocator: ^13.0.2
+  geocoding: ^3.0.0
   
 
 
